Aguregue los links de los href en el index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi amet natus cum nostrum quos
                     laboriosam nam nihil <br> dolorum officiis placeat nulla quis, magni velit quod! Aliquam, consequatur.
                     Placeat, aliquid tempore.</p>
-                <a href="./paginas/menu.html">Comprar</a>
+                <a href="./page/menu.html">Comprar</a>
             </article>
 
             <article class="foto-hamburguesa">
@@ -71,7 +71,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi amet natus cum nostrum quos
                     laboriosam nam nihil dolorum officiis placeat nulla quis, magni velit quod! Aliquam, consequatur.
                     Placeat, aliquid tempore.</p>
-                <a href="./paginas/menu.html">Menu</a>
+                <a href="./page/menu.html">Menu</a>
             </article>
         </section>
 
@@ -85,7 +85,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nisi magni modi necessitatibus?
                     Molestiae, aliquid? Porro similique voluptatum perferendis ab, dolorum voluptas. Sint est ratione
                     officia, reiciendis commodi enim non.</p>
-                <a href="./paginas/menu.html">Encargar</a>
+                <a href="./page/nosotros.html">Encargar</a>
             </article>
             <article class="informacion-inicio">
                 <h3>Metodos de pagos</h3>
@@ -101,7 +101,7 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores perspiciatis culpa illum numquam
                     voluptatum cupiditate, suscipit impedit iusto assumenda enim qui nemo, tempora doloremque obcaecati.
                     Itaque sit quas ipsam pariatur.</p>
-                <a href="./paginas/menu.html">Encargar</a>
+                <a href="./page/menu.html">Encargar</a>
             </article>
         </section>
     </main>
